--- a/project.config.json
+++ b/project.config.json
@@ -33,13 +33,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "在线预约",
 					"pathName": "pages/order/order",
 					"query": "storeCode=UM0001&storeName=大连旗舰店&v=2"
+				},
+				{
+					"id": -1,
+					"name": "在线预约",
+					"pathName": "pages/mine/mine",
+					"query": ""
 				}
 			]
 		}
