--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -45,6 +45,12 @@
 					"id": -1,
 					"name": "在线预约",
 					"pathName": "pages/mine/mine",
+					"query": ""
+				},
+				{
+					"id": 2,
+					"name": "选择门店",
+					"pathName": "pages/selectStores/selectStores",
 					"query": ""
 				}
 			]
