--- a/project.config.json
+++ b/project.config.json
@@ -33,25 +33,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": -1,
 			"list": [
 				{
-					"id": 0,
+					"id": 1,
 					"name": "在线预约",
 					"pathName": "pages/order/order",
-					"query": "storeCode=UM0001&storeName=大连旗舰店&v=2"
-				},
-				{
-					"id": -1,
-					"name": "在线预约",
-					"pathName": "pages/mine/mine",
-					"query": ""
-				},
-				{
-					"id": 2,
-					"name": "选择门店",
-					"pathName": "pages/selectStores/selectStores",
-					"query": ""
+					"query": "orderStore=大连三丰大厦店&incloudProjectCode=PRJ001616&incloudProjectName=龙脑调养护理&storeCode=UM0002&v=1"
 				}
 			]
 		}
